--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.3",
     "react-tabs": "^6.0.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.5",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
