--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-lazy-load": "^4.0.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.3",
